@@ -17,11 +17,7 @@ the file appropriate for the given clock rate.
 
 #define __SFR_OFFSET 0      /* used by avr-libc's register definitions */
 #include "usbportability.h"
-#ifndef __IAR_SYSTEMS_ASM__
-#   define macro    .macro  /* GNU Assembler macro definition */
-#   define endm     .endm   /* End of GNU Assembler macro definition */
-#endif  /* __IAR_SYSTEMS_ASM__ */
-#include "usbdrv.h" /* for common defs */
+#include "usbdrv.h"         /* for common defs */
 
 /* register names */
 #define x1      r16
@@ -37,17 +33,6 @@ the file appropriate for the given clock rate.
 /* Some assembler dependent definitions and declarations: */
 
 #ifdef __IAR_SYSTEMS_ASM__
-
-#   define nop2     rjmp    $+2 /* jump to next instruction */
-#   define XL       r26
-#   define XH       r27
-#   define YL       r28
-#   define YH       r29
-#   define ZL       r30
-#   define ZH       r31
-#   define lo8(x)   LOW(x)
-#   define hi8(x)   (((x)>>8) & 0xff)   /* not HIGH to allow XLINK to make a proper range check */
-
     extern  usbRxBuf, usbDeviceAddr, usbNewDeviceAddr, usbInputBufOffset
     extern  usbCurrentTok, usbRxLen, usbRxToken, usbTxLen
     extern  usbTxBuf, usbTxStatus1, usbTxStatus3
@@ -69,8 +54,6 @@ the file appropriate for the given clock rate.
     RSEG    CODE
 
 #else /* __IAR_SYSTEMS_ASM__ */
-
-#   define nop2     rjmp    .+0 /* jump to next instruction */
 
 #   ifndef USB_INTR_VECTOR /* default to hardware interrupt INT0 */
 #       define USB_INTR_VECTOR  SIG_INTERRUPT0
